# advent-of-code-2021

./: .gitignore  Cargo.toml  time-tests.sh
benches/: puzzles.rs
src/: lib.rs  prelude.rs
src/puzzles/: day00.rs  day00_input.txt  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day13_answer.txt  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs
src/puzzles/day08/: digit.rs  solver.rs
src/shared/: grid.rs  input.rs
