[package]
name = "advent_of_code_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[[bench]]
name = "puzzles"
harness = false

[dependencies]
automod = "1.0.2"
lazy_static = "1.4.0"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3"
